--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
 
   <header>
-    <img src="IMG_1693.PNG" alt="ไม่โหลด" class="in">
+    <img src="IMG_1693.PNG" alt=" " class="in">
     <h1>ปฏิพล จอมพล</h1>
   </header>
 
@@ -135,3 +135,4 @@
 
 </body>
 </html>
+
